CSS needs more work, fixed some issues with overlapping chart

--- a/Client/src/components/App/App.css
+++ b/Client/src/components/App/App.css
@@ -1,13 +1,20 @@
 
+
+
 .body {
   text-align: center;
   background-color: #C0C0C0;
+  width: 100vw;
+  height: 100vh;
+
   
 }
 
 body {
   text-align: center;
   background-color: #C0C0C0;
+  width: 100vw;
+  height: 100vh;
 }
 
 .flex-container1 {
@@ -15,21 +22,9 @@ body {
   flex-direction: column;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: none;
   width: 100vw;
   height: 50vh;
-  
-}
-
-.Data-Box {
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: space-evenly;
-  margin-top: none;
-  width: 90%;
-  height: 100%;
-  
+ 
 }
 
 
@@ -38,7 +33,4 @@ body {
   flex-direction: row;
   align-items: center;
   justify-content: space-evenly;
-  margin-top: none;
-
-  
 }
