--- a/Client/src/components/Graph/index.css
+++ b/Client/src/components/Graph/index.css
@@ -9,9 +9,11 @@ h2 {
 }
 
 .Data-Box {
-    
-    padding-left: 10vw;
-    padding-right: 10vw;
-    margin-bottom: 10vh;
-  
+    display: flex;
+    flex-direction: column;
+    align-items: center;
+    justify-content: space-evenly;
+    margin-top: none;
+    width: 90%;
+    height: 90%;
   }
