--- a/Client/src/components/Invest/index.css
+++ b/Client/src/components/Invest/index.css
@@ -15,8 +15,8 @@
     justify-content: center;
     align-items: center;
     border-radius: 2vw;
-    min-width: 50vw;
-    min-height: 50vh;
+    width: 50%;
+    height: 50%;
     border: solid;
     border-radius: 1vh;
 }
